tests/baselines/reference/conditionalExpression1.errors.txt
==== tests/cases/compiler/conditionalExpression1.ts (1 errors) ====
    var x: boolean = (true ? 1 : ""); // should be an error
                      ~~~~~~~~~~~~~
!!! error TS2226: Type of conditional '{}' must be identical to 'number' or 'string'.